# jiffy

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  alt25-alt.txt  alt25-selfish.txt  alt50-alt.txt  alt75-alt.txt  cmake_uninstall.cmake.in  tcp_settings.sh  tenants150-alt.txt
benchmark/: CMakeLists.txt
benchmark/src/: auto_scaling_tracker.cpp  btree_auto_scaling_benchmark.cpp  btree_auto_scaling_get.cpp  btree_benchmark.cpp  btree_zipf_keys  directory_benchmark.cpp  fifo_queue_auto_scaling_benchmark.cpp  fifo_queue_benchmark.cpp  fifo_queue_block_benchmark.cpp  file_auto_scaling_benchmark.cpp  file_benchmark.cpp  file_block_benchmark.cpp  hash_table_auto_scaling_benchmark.cpp  hash_table_auto_scaling_get.cpp  hash_table_benchmark.cpp  hash_table_block_benchmark.cpp  msg_queue_auto_scaling_benchmark.cpp  msg_queue_benchmark.cpp  random_keys.txt  shared_log_benchmark.cpp  sorted  word_alpha.txt  zipf_dictionary.cpp  zipf_dictionary.h  zipf_generator.h  zipf_random.txt  zipfkeys.txt
cmmux/: CMakeLists.txt
cmmux/test/: test.h  test_cmmux_client.c
directory/: CMakeLists.txt
directory/src/: directory_server.cpp
jiffy4j/: CMakeLists.txt  pom.xml
jiffy4j/assembly/: README.md  pom.xml
jiffy4j/conf/: core-site.xml  log4j.properties
jiffy4j/core/: pom.xml
jiffy4j/hadoop/: README.md  pom.xml
jiffy4j/hadoop/conf/: core-site.xml.template
libdirectory/: CMakeLists.txt
libdirectory/src/: directory_service.cpp  directory_service.h
libdirectory/test/: block_allocator_test.cpp  directory_lease_test.cpp  directory_rpc_service_test.cpp  directory_service_shard_test.cpp  directory_tree_test.cpp  lease_manager_test.cpp  test_utils.h
libelasticmem/: CMakeLists.txt
libelasticmem/bench/: benchmark_utils.h  kv_notification_benchmark.cpp  kv_rpc_benchmark.cpp
libelasticmem/test/: auto_scaling_test.cpp  block_allocation_service_test.cpp  block_allocator_test.cpp  chain_replication_test.cpp  directory_lease_test.cpp  directory_rpc_service_test.cpp  directory_service_test.cpp  directory_tree_test.cpp  elasticmem_tests.cpp  file_size_tracker_test.cpp  kv_block_test.cpp  kv_manager_test.cpp  kv_rpc_test.cpp  lease_expiry_worker_test.cpp  lease_manager_test.cpp  local_store_test.cpp  notification_test.cpp  storage_manager_test.cpp  test_utils.h
libjiffy/: CMakeLists.txt
libjiffy/bench/: benchmark_utils.h  fifo_queue_block_benchmark.cpp  file_block_benchmark.cpp  hash_table_benchmark.cpp  hash_table_block_benchmark.cpp  hash_table_notification_benchmark.cpp  kv_notification_benchmark.cpp  kv_rpc_benchmark.cpp  persistence_benchmark.cpp
libjiffy/test/: auto_scaling_test.cpp  bheap_test.cpp  block_allocation_service_test.cpp  block_allocator_test.cpp  btree_client_test.cpp  btree_partition_test.cpp  chain_replication_test.cpp  directory_lease_test.cpp  directory_service_test.cpp  directory_tree_test.cpp  fifo_queue_client_test.cpp  fifo_queue_local_partition_test.cpp  fifo_queue_multiple_test.cpp  fifo_queue_partition_test.cpp  fifo_queue_performance_test.cpp  file_client_test.cpp  file_concurrent_read_write_test.cpp  file_local_partition_test.cpp  file_partition_test.cpp  file_performance_test.cpp  file_size_tracker_test.cpp  hash_table_client_test.cpp  hash_table_local_client_test.cpp  hash_table_local_partition_test.cpp  hash_table_partition_test.cpp  ht_performance_test.cpp  jiffy_client_test.cpp  jiffy_tests.cpp  karma_test.cpp  kv_block_test.cpp  kv_client_test.cc  kv_client_test.cpp  lease_expiry_worker_test.cpp  local_store_test.cpp  maxmin_test.cpp  msg_queue_client_test.cpp  msg_queue_partition_test.cpp  notification_test.cpp  shared_log_client_test.cpp  shared_log_partition_test.cpp  (+5 more)
libkv/: CMakeLists.txt
libkv/src/: kv_management_service.h  kv_service.h
libkv/test/: kv_block_test.cpp  kv_manager_test.cpp  kv_rpc_test.cpp
libmmux/: CMakeLists.txt
libmmux/bench/: benchmark_utils.h  kv_notification_benchmark.cpp  kv_rpc_benchmark.cpp  persistence_benchmark.cpp
libmmux/test/: auto_scaling_test.cpp  block_allocation_service_test.cpp  block_allocator_test.cpp  chain_replication_test.cpp  directory_lease_test.cpp  directory_service_test.cpp  directory_tree_test.cpp  file_size_tracker_test.cpp  kv_block_test.cpp  kv_client_test.cc  kv_rpc_test.cpp  lease_expiry_worker_test.cpp  local_store_test.cpp  mmux_client_test.cpp  mmux_tests.cpp  notification_test.cpp  storage_manager_test.cpp  sync_worker_test.cpp  test_utils.h
libpersistent/: CMakeLists.txt
libpersistent/src/: persistent_service.h
libpersistent/test/: local_store_test.cpp
maestro-allocator/: CMakeLists.txt
maestro-allocator/src/: allocator_server.cpp  scheduler_server.cpp
pyclient/: CMakeLists.txt  bench.py  setup.cfg  setup.py  setup.py.in
pyclient/elasticmem/: __init__.py  client.py
pyclient/mmux/: __init__.py  client.py
pyclient/test/: test_client.py
pyjiffy/: CMakeLists.txt  bench.py  client_test.py  client_test_2.py  file_benchmark_bp.py  file_benchmark_cb.py  file_benchmark_cp.py  file_benchmark_without_cache_zipf.py  file_bp_zipf_local.py  hash_table_zipf_benchmark.py  maestro-client.py  setup.cfg  setup.py  sz427@node.zoo.cs.yale.edu
pyjiffy/benchmark_result/: .~lock.final.xls#  .~lock.final_hr.xls#  excel_generator.py  file_bp.txt  file_bp_zipf.txt  file_cb.txt  file_cb_zipf.txt  file_cp.txt  file_cp_zipf.txt  final.xls  final_hr.xls  ht_alpha_with_cache.txt  ht_with_cache.txt  ht_zipf_with_cache.txt
pyjiffy/cache_bench/: file_benchmark_bp_zipf.py  file_benchmark_cb_zipf.py  file_benchmark_cp_zipf.py  file_cache_benchmark.py  hash_table_alpha_benchmark.py  hash_table_benchmark.py  hash_table_cache_benchmark.py
pyjiffy/jiffy/: __init__.py  client.py
pyjiffy/maestro_allocator_service/: __init__.py  constants.py  maestro_allocator_service-remote  maestro_allocator_service.py  ttypes.py
pyjiffy/pyjiffy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyjiffy/test/: test_client.py
storage/: CMakeLists.txt
storage/src/: server_storage_tracker.cpp  server_storage_tracker.h  storage_server.cpp
(+3077 files in other folders)
